# ros1_template

./: .gitignore  .travis.yml  CMakeLists.txt  PITCHME.md  PITCHME.yaml  README.md  README.rst  package.xml  setup.py
config/: default.yaml  oracle-default.yaml  oracle-override.yaml  override.yaml  prophet-default.yaml
doc/: ros1_template.rst
launch/: all.launch  oracle.launch  prophet.launch  template.launch
msg/: Answer.msg
nodes/: follower_node.py  oracle_node.py  prophet_node.py  template_node.py
ros1_cpptemplate/: CHANGELOG.rst  CMakeLists.txt  README.md  README.rst  package.xml
ros1_cpptemplate/include/ros1_cpptemplate/: atomic_fibonacci.hpp
ros1_cpptemplate/src/applications/: CMakeLists.txt  multithread_fibonacci_call.cpp
ros1_cpptemplate/src/lib/: atomic_fibonacci.cpp
ros1_cpptemplate/test/: CMakeLists.txt  test_all.cpp  test_atomic_fibonacci.cpp
ros1_pip_pytemplate/: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml  requirements.txt  setup.py  tox.ini
ros1_pip_pytemplate/config/: httpbin-default.yaml  httpbin-override.yaml
ros1_pip_pytemplate/doc/: Makefile  conf.py  index.rst  make.bat  modules.rst  ros1_pip_pytemplate.rst  ros1_pip_pytemplate.tests.rst  ros1_pip_template.rst  ros1_pip_template.tests.rst  tests.rst
ros1_pip_pytemplate/launch/: httpbin.launch  httpbin_proactor.launch  httpbin_reactor.launch
ros1_pip_pytemplate/ros1_pip_pytemplate/: __init__.py  lib_module.py
ros1_pip_pytemplate/ros1_pip_pytemplate/tests/: __init__.py  test_lib_module_embedded.py
ros1_pip_pytemplate/scripts/: cli.py  httpbin_cli.py  httpbin_launch.py  httpbin_node.py  launch.py  node.py  node_proactive.py  node_reactive.py
ros1_pip_pytemplate/tests/: __init__.py  node_proactive.test  node_reactive.test  test_cli.py  test_httpbin_node.py  test_node.py  test_node_proactive.py  test_node_reactive.py
ros1_pytemplate/: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.rst  package.xml  setup.py
ros1_pytemplate/config/: fibonacci-default.yaml  fibonacci-override.yaml
ros1_pytemplate/doc/: Makefile  conf.py  index.rst  make.bat  modules.rst  ros1_pytemplate.rst
ros1_pytemplate/launch/: all.launch  answer.launch  fibonacci.launch
ros1_pytemplate/nodes/: answer_server_node.py  fibonacci_pub_node.py  fibonacci_sub_node.py
ros1_pytemplate/ros1_pytemplate/: __init__.py  lib_module.py
ros1_pytemplate/rostests/: CMakeLists.txt
ros1_pytemplate/rostests/answer_server/: answer_server.test  test_answer_server.py
ros1_pytemplate/rostests/fibonacci_pubsub/: fibonacci_pub.test  fibonacci_sub.test  test_fibonacci_pub.py  test_fibonacci_sub.py
ros1_pytemplate/rostests/integration/: all.test  answer_server.test  answer_server_cfg.test  config_answer.yml  config_fibonacci.yml  fibonacci_pubsub.test  test_fibonacci.py
ros1_pytemplate/rostests/launchers/: all_launch.test  answer_launch.test  fibonacci_launch.test
ros1_pytemplate/scripts/: question_cli.py
ros1_pytemplate/tests/test_ros1_pytemplate/: test_lib_module.py
ros1_ros_cpptemplate/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelets.xml  package.xml
ros1_ros_cpptemplate/config/: default.yaml  override.yaml
ros1_ros_cpptemplate/doc/: manifest.yaml  rosdoc.yaml  test.md
ros1_ros_cpptemplate/include/ros1_ros_cpptemplate/: publisher.hpp  service.hpp  subscriber.hpp
ros1_ros_cpptemplate/launch/: standalone.launch
ros1_ros_cpptemplate/src/: CMakeLists.txt  nodelet.cpp  publisher.cpp  service.cpp  subscriber.cpp
ros1_ros_cpptemplate/test/: CMakeLists.txt  publishers.cpp  publishers.test  service.cpp  service.test  subscribers.cpp  subscribers.test  test_publishers2.cpp
ros1_ros_cpptemplate/test/launch/: nodelet.test
ros1_template/: CHANGELOG.rst  CMakeLists.txt  __init__.py  lib_module.py  package.xml
ros1_template_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros1_template_msgs/cfg/: Fibonacci.cfg
ros1_template_msgs/msg/: Arg.msg  Args.msg
ros1_template_msgs/srv/: Get.srv
rostests/: CMakeLists.txt  Readme.md
rostests/oracle/: oracle.test  test_oracle.py
rostests/prophet/: follower.test  prophet.test  test_follower.py  test_prophet.py
scripts/: question.py
srv/: Answer.srv  Question.srv
tests/: CMakeLists.txt
tests/test_ros1_template/: test_lib_module.py
