<?xml version="1.0"?>
<package format="2">
  <name>ros1_pytemplate</name>
  <version>0.1.1</version>
  <description>
    Python Template ROS node for use with catkin following good practices
  </description>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/pyros-dev/ros1_template</url>
  <url type="repository">https://github.com/pyros-dev/ros1_template</url>
  <author email="asmodehn@gmail.com">AlexV</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>ros1_template_msgs</build_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
