##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(ros1_template_msgs)

##############################################################################
# Dependencies
##############################################################################

find_package(catkin REQUIRED COMPONENTS message_generation)


##############################################################################
# Messages
##############################################################################

add_message_files(
  DIRECTORY
    msg
  FILES
    Fibonacci.msg
    Arg.msg
)

##############################################################################
# Services
##############################################################################

add_service_files(
  DIRECTORY
    srv
  FILES
    Answer.srv
    Get.srv
)

generate_messages()

##############################################################################
# Catkin
##############################################################################

catkin_package(CATKIN_DEPENDS
             message_runtime
)

