##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(ros1_template_msgs)

##############################################################################
# Dependencies
##############################################################################

find_package(catkin REQUIRED COMPONENTS message_generation dynamic_reconfigure)


##############################################################################
# Messages
##############################################################################

add_message_files(
  DIRECTORY
    msg
  FILES
    Fibonacci.msg
)

##############################################################################
# Services
##############################################################################

add_service_files(
  DIRECTORY
    srv
  FILES
    Answer.srv
)

generate_messages()

##############################################################################
# Dynamic Reconfigure
##############################################################################

generate_dynamic_reconfigure_options(
    cfg/Fibonacci.cfg
)

##############################################################################
# Catkin
##############################################################################

catkin_package(CATKIN_DEPENDS
             message_runtime
             dynamic_reconfigure
)
