<?xml version="1.0"?>
<package format="2">
  <name>ros1_template_msgs</name>
  <version>0.1.1</version>
  <description>
    Template ROS messages for use with catkin following good practices
  </description>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/pyros-dev/ros1_template</url>
  <url type="repository">https://github.com/pyros-dev/ros1_template</url>
  <author email="asmodehn@gmail.com">AlexV</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <doc> TODO</doc>
  </export>
</package>
